src/App.css
/* Sticky footer styles
-------------------------------------------------- */
html {
  position: relative;
  min-height: 100%;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 99%;
  /* Set the fixed height of the footer here */
  min-height: 200px;
  line-height: 25px; /* Vertically center the text there */
  background-color: #f5f5f5;
  font-size: small;
}

.App-link {
  color: #61dafb;
}
.btn-flat {
  color: black;
  background-color: #f3ede5;
}
.homeText {
  font-size: large;
}

.homeImage {
  height: 880px;
  background-image: url(images/Home.jpg);
  background-size: cover;
  background-position: 65% 30%;
  background-repeat: no-repeat;
}
.img-wrapper-zoom {
  display: inline-block;
  overflow: hidden;
  border: 1px solid gray;
}

.img-wrapper-zoom img {
  -webkit-transition: all 0.2s ease;
  -moz-transition: all 0.2s ease;
  -ms-transition: all 0.2s ease;
  -o-transition: all 0.2s ease;
  transition: all 0.2s ease;

  vertical-align: middle;
}

.img-wrapper-zoom img:hover {
  -webkit-transform: scale(1.5); /* Safari and Chrome */
  -moz-transform: scale(1.5); /* Firefox */
  -ms-transform: scale(1.5); /* IE 9 */
  -o-transform: scale(1.5); /* Opera */
  transform: scale(1.5);
}
.img-wrapper-zoom a {
  position: absolute;
  bottom: 5px;
  right: 5px;
  background: blue;
  color: #fff;
}
.btn-primary-outline {
  background-color: transparent;
  border-color: #ccc;
}

.pricingcard {
  position: relative;
  width: 100%;
  max-width: 400px;
}

.pricingcard img {
  width: 100%;
  height: auto;
}

.pricingcard .btn {
  position: absolute;
  top: 85%;
  left: 50%;
  opacity: 0.5;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  background-color: black;
  color: white;
  font-size: 16px;
  padding: 12px 24px;
  border: none;
  cursor: pointer;
  border-radius: 5px;
  text-align: center;
}

.pricingcard .btn:hover {
  opacity: 0.78;
  color: white;
}

.reviewTextRightAlign {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  font-style: italic;
  font-size: 14px;
  text-align: right;
}
.reviewTextLeftAlign {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  font-style: italic;
  font-size: 14px;
  text-align: left;
}

.reviewImg {
  width: 100%;
  max-width: 650px;
  min-width: 400px;
}

